3 инпута - есть сложность с блокировкой (disabled) input, потому что editable не хочет принимать переменную; - почему-то у кнопок (click) работает по щелчку не на кнопку, а не её родительский div; - при событии (focus) у инпута меняется стиль (height инпута становится меньше, border становится чёрным, даже если изначально задан серый цвет).

--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,8 +1,10 @@
-<div [className]="className" id="parent">
+<div id="parent" [className]="className">
   <div id="child" contenteditable="true" (keydown)="stopEnter($event)" (focus)="getTextID($event)">
+<!--    -->
     <p [id]="textId">
         <ng-content></ng-content>
         {{content}}
     </p>
   </div>
+  <label id="label" for="child" *ngIf="!!whatLabel" [class]="whatLabel">{{textLabel}}</label>
 </div>
