--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -380,7 +380,7 @@
 
       <div class="row">
         <!-- input -->
-        <app-input [formControl]="control" [disabled]="true"></app-input>
+        <app-input [formControl]="control"></app-input>
         <div>{{ control.value }}</div>
       </div>
 
