--- a/src/app/checkbox/checkbox.component.less
+++ b/src/app/checkbox/checkbox.component.less
@@ -1,24 +1,22 @@
-.input {
-  overflow-x: hidden; // полос прокрутки нет, а работает как со значением scroll
-  white-space: nowrap; // для того, чтобы текст не переходил на другую строку сам
-  height: 40px;
-  width: 170px; // обязательное значение здесь
-  max-width: 170px; // помогает не удлинняться полю ввода
-  border-radius: 3px;
+.checkbox {
+  height: 20px;
+  width: 20px; // обязательное значение здесь
+  //border-radius: 3px;
   border: 1px solid gray;
   box-shadow: inset 2px 2px 5px gray, 1px 1px 5px rgba(255, 255, 255, 1);
-  display: flex; // позволяет проще управлять расположением элемента на странице
+  display: flex;
   align-items: center; // определяет вертикальное выравнивание всех дочерних элементов по центру родительского.
+  justify-content: center; // по действию подобен предыдущему свойству, но работает в другом направлении - горизонтальном
   vertical-align: middle; // и делает текст расположенным вертикально по центру
-  padding: 0 5px;
   box-sizing: border-box; // свойства width и height включают в себя значения полей и границ, но не отступов (margin)
+  cursor: pointer;
 
-  &__text {
+  &__checkmark {
     width: 100%;
-    outline: none; // убирает обводку у элемента
-    padding: 0 5px;
-    box-sizing: border-box;
-    cursor: text;
+    padding: 0 4px;
+    color: #1976d2;
+    font-weight: 900;
+    //box-sizing: border-box;
   }
 }
 
@@ -28,6 +26,7 @@
   cursor: not-allowed;
 
   * {
+    color: #4e4e4e;
     background: #bdbcbc;
     pointer-events: none; // запрещает мыши работу с элементом
   }
