--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -389,7 +389,7 @@
       </div>
 
       <div class="row">
-        <!-- checkbox -->
+        <!-- checkbox-with-output -->
         <app-checkbox [disabled]="disabled" (checkTrue)="checkmarkOnChange($event)"></app-checkbox>
         <div>{{checkmark}}</div>
       </div>
