--- a/src/app/checkbox-control-value-accessor/checkbox-control-value-accessor.component.less
+++ b/src/app/checkbox-control-value-accessor/checkbox-control-value-accessor.component.less
@@ -21,24 +21,30 @@
 }
 
 .checkbox-container label::before {
-  /*   ::before создаёт псевдоэлемент,который является первым потомком выбранного элемента.
+  /* Справка:
+  ::before создаёт псевдоэлемент,который является первым потомком выбранного элемента.
   Часто используется для добавления косметического содержимого в элемент с помощью свойства content.
   По умолчания является инлайновым. */
-  content: '';
-  width: 16px;
-  height: 8px;
-  border: 4px solid #000;
-  position: absolute;
-  border-top: none;
-  border-right: none;
-  transform: rotate(-50deg); // поворачивает элементы вокруг собственного центра
-  top: 1px;
-  left: 1px;
-  opacity: 0; // элемент прозрачный
+  content: '✓';
+  width: 100%;
+  padding: 0 4px;
+  color: #1976d2;
+  //font-weight: 900; // Сами создаём галочку
+  //content: '';
+  //width: 16px;
+  //height: 8px;
+  //border: 4px solid #000;
+  //position: absolute;
+  //border-top: none;
+  //border-right: none;
+  //transform: rotate(-50deg); //Информационная заметка: поворачивает элементы вокруг собственного центра
+  //top: 1px;
+  //left: 1px;
+  opacity: 0; // Справка: элемент прозрачный
 }
 
 .checkbox-container input[type="checkbox"]:checked + label::before {
-  /*
+  /* Справка:
   + поможет выбрать только тот элемент, который следует сразу же за указанным элементом
 
   :checked находит любые элементы radio (<input type="radio">), checkbox (<input type="checkbox">) или option (<option> внутри <select>),
@@ -46,17 +52,16 @@
   в этом случае :checked повторно не применится к элементу, а сохранится
    */
 
-  opacity: 1; // элемент непрозрачный
+  opacity: 1; // Справка: элемент непрозрачный
 }
 
-.disabled { // не работает, подключить к стилям бокса
-  border: 1px solid #4e4e4e;
-  background: #bdbcbc;
-  cursor: not-allowed; // почему-то не работает
-  pointer-events: none; // запрещает мыши работу с элементом
+.disabled {
+  cursor: not-allowed; // Почему не работает (причём у моего первого чекбокса тоже не работает)?
+  pointer-events: none; // Справка: запрещает мыши работу с элементом
+}
 
-  * {
-    color: #4e4e4e;
-    background: #bdbcbc;
-  }
+.disabled label {
+  color: #4e4e4e; // Почему не заботает?
+  border: 1px solid #4e4e4e;
+  background-color: #bdbcbc;
 }
