--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -405,14 +405,38 @@
         <div class="column">
           <form #form="ngForm" (ngSubmit)="submit(form.value)">
             <div>
-              <app-checkbox-control-value-accessor name="title1" [(ngModel)]="title1" [disabled]="disabled" class="row"></app-checkbox-control-value-accessor>
-              <app-checkbox-control-value-accessor name="title2" [(ngModel)]="title2" [disabled]="disabled" class="row"></app-checkbox-control-value-accessor>
-              <app-checkbox-control-value-accessor name="title3" [(ngModel)]="title3" [disabled]="disabled" class="row"></app-checkbox-control-value-accessor>
+              <div class="row">
+                <app-checkbox-control-value-accessor id="checkbox1" name="value1" [(ngModel)]="valueCheckbox1" [disabled]="disabled"></app-checkbox-control-value-accessor>
+              </div>
+              <app-checkbox-control-value-accessor id="checkbox2" name="value2" [(ngModel)]="valueCheckbox2" [disabled]="disabled" class="row"></app-checkbox-control-value-accessor>
+              <app-checkbox-control-value-accessor id="checkbox3" name="value3" [(ngModel)]="valueCheckbox3" [disabled]="disabled" class="row"></app-checkbox-control-value-accessor>
             </div>
           </form>
         </div>
         <div class="column">
           <pre>{{ form.value | json }}</pre>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="column">
+          <h3 class="elem_center">Radio button list</h3>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="column">
+          <form [formGroup]="frm">
+            <div *ngFor="let item of listOptions">
+              <app-radio-button [id]="item.name" [frm]="frm" [label]="item.name" [value]="item.name" cn="selected_value"></app-radio-button>
+            </div>
+<!--            <app-radio-button id="rc1" [frm]="frm" label="Yes" value="Yes" cn="selected_value" ></app-radio-button>-->
+<!--            <app-radio-button id="rc2" [frm]="frm" label="No" value="No" cn="selected_value"></app-radio-button>-->
+          </form>
+        </div>
+        <div class="column">
+          <h3>Form Data</h3>
+          <pre>{{frm.value | json}}</pre>
         </div>
       </div>
 
