--- a/src/app/radio-button/radio-button.component.html
+++ b/src/app/radio-button/radio-button.component.html
@@ -1,5 +1,8 @@
-<div [formGroup]="frm">
+<div [formGroup]="frm" class="b-radio">
   <label [for]="id">
-    <input [id]="id" type="radio" [value]="value" [formControlName]="cn" [checked]="frm.get(cn).value === value">{{label}}
+    <input [id]="id" class="custom-radio" type="radio" [value]="value" [formControlName]="cn" [checked]="frm.get(cn).value === value">
+    <span>
+      {{label}}
+    </span>
   </label>
 </div>
